--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recherche de films</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <h1>Recherche de films</h1>
+    <div class="search-container">
+        <form id="search-form">
+            <label for="search">Rechercher un film :</label>
+            <input type="text" id="search" name="search" placeholder="Titre du film...">
+            <button type="submit">Rechercher</button>
+        </form>
+        <div>
+            <label for="language">Choisir la langue:</label>
+            <select id="language" name="language">
+                <option value="fr">Français</option>
+                <option value="en">Anglais</option>
+                <option value="es">Espagnol</option>
+            </select>
+        </div>
+    </div>
+    <h2>Films à découvrir</h2>
+    <ul id="movie-list"></ul>
+    <div id="pagination">
+        <button id="prev-page" disabled>Page précédente</button>
+        <span id="current-page">1</span> / <span id="total-pages">1</span>
+        <button id="next-page" disabled>Page suivante</button>
+    </div>
+
+    <script src="js/classes/TimdbApi.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
